# Reapears

./: .gitignore  Cargo.toml
.cargo/: config.toml
.sqlx/: query-082aff29a5a446dd73e6ad3a43c3e6affb01b1c5f3b36a0f910836b7ec48f6dc.json  query-0b0db1c373963eb43252df55ff15c7bf27855256d649bda7a24a1665b99e4764.json  query-105630fbd60e442c0af265522ba4409d5dd9de8c855d3675181bbece4daeb4c7.json  query-25dbd947c54819e120c5872eae1e8d53c1f30da1209cae70aa10724622adb7fe.json  query-33ec130811768095c8cdb5048b7b7bb244170966929091dbbe01c4198bc0533c.json  query-370413b7b43ac76bf88bb0a8e824a4fff714cdfa39c6ebcd00617a7519ca5e88.json  query-38f899b2f613a5e7df0a6294c80d630ce4398a488430da49087cc60b36c812e8.json  query-3a3034303390ad4e14368571660bbfb5170cc342f489fbd0381096aae9da6924.json  query-585d89ac29a58901c5fb5afadc5514e2d3b7ff509de9e29d7ad26a6056b50ed8.json  query-5bbae43602be57791a91c77ad63664000e805e8bafcc3ad6859e0b9200d8a316.json  query-5e90522a8a7776615fd9363942f65ab8c554663b3ed84bd6ffa8aad8f051a8c0.json  query-82b6dd1c05b6a10122d0f3448c6882e7b96cabbb0cc479ac50c9bfe17ed3eb6a.json  query-896a099dec91e4eb86bc93a4107a97e9eb3558a5d150b5eeafaea4dd1f0d1dc7.json  query-99bc3f75176a63123c549c0a24707e047d26451c8b89cc13052dd36c1bf19f03.json  query-b37ab888e7f95a7d74a515d5efbb4fc0f99b31a313e5df4157d9077457f7b1af.json  query-b71517f382738b996b3d6f85460a7a946082587eb290c3223d3bd68feda8f11e.json  query-bbf3a228eba2ee8b65d9a3eda796f0c4dd60351ef0beed902cd763fa62e12307.json  query-bc4371d5d31966a547ef1dd65f41c769c242698dfd8c163b339d3c852bf19f1f.json  query-c37e4800f803f710dd9966519a20ed46aec2d86dbc268a6b64fb20995e80e1ce.json  query-cb789cb2bb7850f02b582e7b71bf3036fd9ee722db5180333cbc6b7d6b827aac.json  query-cddfa8f44d5035b41e370e10fe88956d8838945a50450faa8296532d8875c94e.json  query-d6afa6a484166f83094bc73728bc439fc25372e808b3bf1e6cd8d4f1963dba84.json  query-e283f5e55c0169f9daa967bb63b14e6b0d8a792a2b778050e248c8fb4e700139.json  query-e2be950bbfc82d847aa03dae9212b85aa0f83ae2fdfa06a68ebcef19322fc2e0.json  query-f0a47984304b18dbe79d874fedf62b0281fc9ad8e10c00ab9c9851049eb1d3d8.json  query-f391a46f5f78ff6486d831135bccccebc5c0f3e54db8afa9f8a5ed1d25f9ad4e.json  query-fb8d03aaee925c4c8762dd245c1425f2215a0c17bce22a6176d611cc8c81b60f.json  query-fd7bd08db3cd0709a3767efde8998b013ec95179031c3b8b1079273c92bcc47a.json
UI/: email.html
UI/web-app/src/api-handlers/: index.js  settings.js
frontend/web-app/: index.html
frontend/web-app/src/: style.css
frontend/web-app/src/api-handlers/: farm.js  user.js
frontends/web-app/: package.json
frontends/web-app/src/: main.js
frontends/web-app/src/api-handlers/: accounts.js  cultivar.js  harvest.js  location.js
frontends/web-app/src/router/: index.js
migrations/: 20230307075119_setup.down.sql  20230307075119_setup.up.sql  20230730105341_genesis.down.sql  20230731195758_setup_data.up.sql  20230804191213_setup-data.up.sql
src/: lib.rs  main.rs
src/core/: consts.rs  error.rs  mod.rs  settings.rs
src/core/accounts/: delete.rs  mod.rs
src/core/accounts/emails/: db.rs  forms.rs  handlers.rs
src/core/accounts/passwords/: db.rs  forms.rs  handlers.rs  mod.rs
src/core/accounts/personal_info/: db.rs  forms.rs  handlers.rs  models.rs
src/core/accounts/user/: db.rs  forms.rs  handlers.rs  mod.rs  models.rs  utils.rs
src/core/accounts/user_profile/: db.rs  forms.rs  handlers.rs  mod.rs  models.rs  utils.rs
src/core/auth/: current_user.rs  mod.rs
src/core/auth/api_key/: handlers.rs  mod.rs
src/core/auth/security/: mod.rs  password_hash.rs  token.rs
src/core/auth/sessions/: db.rs  forms.rs  handlers.rs  mod.rs  models.rs
src/core/db/: mod.rs
src/core/endpoint/: mod.rs  model_id.rs  rejection.rs  validated_json.rs  validators.rs
src/core/files/: handler.rs  images.rs  mod.rs  uploaded.rs
src/core/mail/: emails.rs  mailer.rs  message.rs  mod.rs
src/core/mail/emails/: account_confirmation.rs  email_change.rs  password_reset.rs
src/core/server/: cli.rs  config.rs  mod.rs  routers.rs  serve.rs  state.rs
src/core/server/maintenance/: tasks.rs
src/core/server/routers/: accounts.rs  services.rs
src/core/types/: identifier.rs  mod.rs  model_id.rs  pagination.rs  price.rs
src/features/: mod.rs
src/features/direct_message/: chat.rs  db.rs  forms.rs  handlers.rs  mod.rs  models.rs
src/features/harvest_subscription/: db.rs  forms.rs  handlers.rs
src/services/farmers/farm/: admin.rs  db.rs  forms.rs  handlers.rs  models.rs  permissions.rs  utils.rs
src/services/farmers/location/: admin.rs  db.rs  forms.rs  handlers.rs  mod.rs  models.rs  permissions.rs  utils.rs
src/services/farmers/rating/: admin.rs  db.rs  forms.rs  handlers.rs  models.rs  permissions.rs
src/services/produce/: handler.rs  mod.rs
src/services/produce/cultivar/: db.rs  forms.rs  handlers.rs  mod.rs  models.rs  utils.rs
src/services/produce/harvest/: admin.rs  db.rs  forms.rs  handlers.rs  mod.rs  models.rs  permissions.rs  utils.rs
tests/data/migrations/: 20230730105341_genesis.up.sql  20230730105442_farms.up.sql  20230730105732_harvests.up.sql  20230731195758_setup_data.up.sql
tests/db-data/: 2-accounts.sql  6-serv-cultivar.sql  7-serv-farms.sql  8-serv-harvest.sql
tests/migrations/: 20230804191149_genesis.up.sql  20230804191319_harvests.up.sql  20230806170757_genesis.up.sql  20230806170934_harvests.up.sql
webapp/: package-lock.json  package.json  upload_not_found.html
webapp/public/: index.html
webapp/src/: App.js  endpoint.js  index.css  index.js
webapp/src/components/: Footer.jsx  Header.jsx
webapp/src/routes/: UIRouter.jsx
webapp/src/store/: index.js
webapp/src/ui/: main.css  theme.js
webapp/src/views/accounts/: AccountConfirm.jsx  AccountSignUp.jsx  EmailChange.jsx  EmailChangeApprove.jsx  EmailChangeConfirm.jsx  PasswordChange.jsx  PasswordForgot.jsx  PasswordReset.jsx  PersonalInfoUpdate.jsx  UserProfile.jsx  UserProfilePhoto.jsx  UserProfileUpdate.jsx
webapp/src/views/farmer/: FarmCreate.jsx  FarmLogoUpload.jsx  FarmUpdate.jsx  LocationCreate.jsx  LocationUpdate.jsx
webapp/src/views/produce/: Harvest.jsx  (+5 more)
webapp/web-app/src/: App.vue
(+17 files in other folders)
