[package]
name = "reapears"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["io"] }

# http-server
axum = { version = "0.6", features = ["multipart", "ws", "headers", "macros"] }
axum-extra = { version = "0.7", features = [
    "cookie-private",
    "query",
    "erased-json",
] }
hyper = { version = "0.14", features = ["full"] }

# database
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "time",
    "json",
    "uuid",
    "decimal",
] }

# http-client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "trust-dns"] }

# middlewares
tower = { version = "0.4", features = [
    "retry",
    "timeout",
    "filter",
    "limit",
    "load-shed",
] }
tower-http = { version = "0.4", features = ["full"] }

# data-serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive", "phone"] }

# crypto
argon2 = "0.5.0-pre.0"
blake3 = "1"
rand = "0.8"
secrecy = "0.8"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
console-subscriber = "0.1"
color-eyre = "0.6"

# Emails
lettre = { version = "0.10", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
    "hostname",
    "tokio1-rustls-tls",
] }

# cli-confing
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"

# Others
camino = "1"
geo = { version = "0.23", features = ["use-serde"] }
image = { version = "0.24", features = ["webp-encoder"] }
itertools = "0.10"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
uuid = { version = "1", features = [
    "v4",
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rust_decimal = { version = "1", features = ["db-postgres", "serde-with-str"] }



# Profiles Section
[profile.dev.package.sqlx-macros]
opt-level = 3