[package]
name = "reapears"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.8", features = ["io"] }


# Http server
axum = { version = "0.6.18", features = [
    "multipart",
    "ws",
    "headers",
    "macros",
] }
axum-extra = { version = "0.7.4", features = [
    "cookie-private",
    "query",
    "erased-json",
] }
hyper = { version = "0.14.27", features = ["full"] }
bytes = "1.4.0"

# Database drive
sqlx = { version = "0.7.0", default-features = false, features = [
    "tls-rustls",
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "time",
    "json",
    "uuid",
    "rust_decimal",
    "bigdecimal",
] }

# Http client
reqwest = { version = "0.11.18", features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }

# Middleware
tower = { version = "0.4.13", features = [
    "buffer",
    "limit",
    "load-shed",
    "timeout",
    "util",
] }
tower-http = { version = "0.4.1", features = [
    "catch-panic",
    "cors",
    "fs",
    "limit",
    "normalize-path",
    "propagate-header",
    "request-id",
    "sensitive-headers",
    "timeout",
    "trace",
    "util",
] }

# Json and data validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive", "phone"] }
minijinja = "1.0.3"

# Cryptograpy
password-auth = "0.3.0"
blake3 = "1.4.1"
rand = "0.8.5"
secrecy = "0.8.0"

# Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
console-subscriber = "0.1.9"
color-eyre = "0.6.2"

# Emails
lettre = { version = "0.10.4", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
    "hostname",
    "tokio1-rustls-tls",
] }

# Cli and Confing
clap = { version = "4.3.11", features = ["derive"] }
dotenvy = "0.15.7"

# Mics
camino = "1.1.4"
geo = { version = "0.25.1", features = ["use-serde"] }
image = { version = "0.24.6", features = ["webp-encoder"] }
itertools = "0.11.0"
time = { version = "0.3.22", features = ["serde", "serde-human-readable"] }
uuid = { version = "1.4.0", features = [
    "v4",
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rust_decimal = { version = "1.30.0", features = [
    "db-postgres",
    "serde-with-str",
] }


# Profiles Section
[profile.dev.package.sqlx-macros]
opt-level = 3
