[package]
name = "reapears"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["console-subscriber", "color-eyre"]

[dependencies]
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "net",
    "io-util",
    "sync",
    "signal",
    "macros",
    "tracing",
] }
axum = { version = "0.6.20", features = [
    "multipart",
    "ws",
    "headers",
    "tracing",
    "macros",
] }
axum-extra = { version = "0.7.7", features = ["cookie-private", "query"] }
tower = { version = "0.4.13", features = [
    "buffer",
    "limit",
    "load-shed",
    "timeout",
    "util",
] }
tower-http = { version = "0.4.3", features = [
    "catch-panic",
    "cors",
    "fs",
    "limit",
    "normalize-path",
    "propagate-header",
    "request-id",
    "sensitive-headers",
    "set-header",
    "timeout",
    "trace",
    "util",
] }
bytes = "1.4.0"
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 
sqlx = { version = "0.7.1", default-features = false, features = [
    "tls-rustls",
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "time",
    "json",
    "uuid",
    "rust_decimal",
] }
lettre = { version = "0.10.4", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
    "hostname",
    "tokio1-rustls-tls",
] }
minijinja = "1.0.6"
image = { version = "0.24.7", features = ["webp-encoder"] }

# 
password-auth = "0.3.0"
blake3 = "1.4.1"
rand = "0.8.5"

# 
itertools = "0.11.0"
geo = { version = "0.26.0", features = ["use-serde"] }
uuid = { version = "1.4.1", features = ["v7", "fast-rng", "serde"] }
time = { version = "0.3.27", features = ["serde-human-readable"] }
phonenumber = "0.3.2"
rust_decimal = "1.32.0"

# 
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
# opentelemetry = "0.19.0"
# tracing-opentelemetry = "0.19.0"
# opentelemetry-jaeger = "0.18.0"
console-subscriber = { version = "0.1.9", optional = true }
color-eyre = { version = "0.6.2", optional = true }

# 
clap = { version = "4.3.19", features = ["derive"] }
dotenvy = "0.15.7"


# [dev-dependencies]
# insta = "1.31.0"


# Profiles Sections

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
